--- a/css/alistcss.css
+++ b/css/alistcss.css
@@ -54,5 +54,9 @@ background-color: rgba(255, 255, 255, 0.5) !important;
 .tanle {
     margin: auto;
 }
+/*去掉底部*/
+.footer {
+    display: none !important;
+}
 
 </style>
