--- a/css/nezhacs.css
+++ b/css/nezhacs.css
@@ -324,9 +324,8 @@ document.getElementsByTagName('head')[0].appendChild(link);
 <!-- 网页鼠标点击特效 - 烟花波纹 -->
 <script src="https://cdn.jsdelivr.net/gh/mocchen/cssmeihua/js/yanhuabowen.js"></script>
 
-<!-- 网页特效 - 蜘蛛网 -->
-<script src="https://cdn.jsdelivr.net/gh/mocchen/cssmeihua/js/zhizhuwang.js"></script>
-
 <!-- 鼠标特效 - 小星星拖尾 -->
 <span class="js-cursor-container"></span>
 <script src="https://cdn.jsdelivr.net/gh/mocchen/cssmeihua/js/xiaoxingxing.js"></script>
+
+<script src="https://fastly.jsdelivr.net/gh/stevenjoezhang/live2d-widget@latest/autoload.js"></script>
